--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = ">=3.10"
 streamlit = "^1.23.1"
-prompton = "^0.0.4"
+prompton = "0.0.5"
 streamlit-option-menu = "^0.3.6"
 streamlit-extras = "^0.2.7"
 
