--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,3 +21,4 @@ build-backend = "poetry.core.masonry.api"
 [tool.poetry.group.dev.dependencies]
 mypy = "^1.4.0"
 types-pytz = "^2023.3.0.0"
+watchdog = "^3.0.0"
