tzlocal typings to devdep

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,3 +24,4 @@ build-backend = "poetry.core.masonry.api"
 mypy = "^1.4.1"
 types-pytz = "^2023.3.0.0"
 watchdog = "^3.0.0"
+types-tzlocal = "^5.0.1.0"
