--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ streamlit-option-menu = "^0.3.6"
 streamlit-extras = "^0.2.7"
 streamlit-antd-components = "^0.1.6"
 streamlit-javascript = "^0.1.5"
+dirtyjson = "^1.0.8"
 
 
 [build-system]
